# InfermonSAGA

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
features/topologyMap/: CMakeLists.txt  test.cpp
features/topologyMap/include/: manyfold.h
features/topologyMap/src/: manyfold.cpp
report/: .gitignore  main.tex  references.bib
